--- a/index.html
+++ b/index.html
@@ -1,1 +1,97 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset='utf-8'>
+
+  <title>soumendra/NSEStalker @ GitHub</title>
+
+  <style type="text/css">
+    body {
+      margin-top: 1.0em;
+      background-color: #CCFFFF;
+      font-family: Helvetica, Arial, FreeSans, san-serif;
+      color: #ffffff;
+    }
+    #container {
+      margin: 0 auto;
+      width: 700px;
+    }
+    h1 { font-size: 3.8em; color: #e913c9; margin-bottom: 3px; }
+    h1 .small { font-size: 0.4em; }
+    h1 a { text-decoration: none }
+    h2 { font-size: 1.5em; color: #e913c9; }
+    h3 { text-align: center; color: #e913c9; }
+    a { color: #e913c9; }
+    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+    .download { float: right; }
+    pre { background: #000; color: #fff; padding: 15px;}
+    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
+    .footer { text-align:center; padding-top:30px; font-style: italic; }
+  </style>
+</head>
+
+<body>
+  <a href="http://github.com/soumendra/NSEStalker"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+
+  <div id="container">
+
+    <div class="download">
+      <a href="http://github.com/soumendra/NSEStalker/zipball/master">
+        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+      <a href="http://github.com/soumendra/NSEStalker/tarball/master">
+        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+    </div>
+
+    <h1><a href="http://github.com/soumendra/NSEStalker">NSEStalker</a>
+      <span class="small">by <a href="http://github.com/soumendra">soumendra</a></span></h1>
+
+    <div class="description">
+      Tools for downloading data from NSE website and managing and updating it.
+    </div>
+
+    <p>NSEStalker lets you download data from three different Sources -
+
+* NSE Official Website (using bhavcopies)
+* Yahoo Finance
+* IB TWS API (Interactive Brokers)
+
+Data integrity checking tools are included, which can also check for conformity between data of same granularity but different sources.
+
+Once the data has been downloaded and set up in a database, update tools included in the suite can be used to update the database regularly.</p><h2>Dependencies</h2>
+
+<p>R - RMySql, RUnit
+g++
+IB TWS API
+</p>
+<h2>License</h2>
+<p>GPL 3</p>
+<h2>Authors</h2>
+<p>Soumendra Prasad Dhanee (soumendra@gmail.com)
+<br/>
+<br/>      </p>
+<h2>Contact</h2>
+<p>Soumendra Prasad Dhanee (soumendra@gmail.com)
+<br/>      </p>
+
+
+    <h2>Download</h2>
+    <p>
+      You can download this project in either
+      <a href="http://github.com/soumendra/NSEStalker/zipball/master">zip</a> or
+      <a href="http://github.com/soumendra/NSEStalker/tarball/master">tar</a> formats.
+    </p>
+    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+
+      by running:
+      <pre>$ git clone git://github.com/soumendra/NSEStalker</pre>
+    </p>
+
+    <div class="footer">
+      get the source code on GitHub : <a href="http://github.com/soumendra/NSEStalker">soumendra/NSEStalker</a>
+    </div>
+
+  </div>
+
+  
+</body>
+</html>
