--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #00FFFF;
+      background-color: #E0FFFF;
       font-family: Helvetica, Arial, FreeSans, san-serif;
     }
     #container {
