index.html - updated (dependancies)

--- a/index.html
+++ b/index.html
@@ -53,13 +53,18 @@
 NSEStalker is a suite of utilities to download data from NSE website and maintain it.
 <br />
 Once the data has been downloaded and set up in a database, update tools included in the suite can be used to update the database regularly.
+<br />
+A front-end using R is included to make sharing the data easier.
 </p>
 
 <h2>Dependencies</h2>
 
-<p>R - RMySql, RUnit
-g++
-IB TWS API
+<p>
+<ul>
+<li>R - RMySql, RUnit</li>
+<li>g++</li>
+<li>IB TWS API</li>
+</ul>
 </p>
 
 <h2>License</h2>
